added voter and edited twig

--- a/templates/front/ticket/home.html.twig
+++ b/templates/front/ticket/home.html.twig
@@ -11,67 +11,77 @@
 			{% endfor %}
 		{% endfor %}
 	</div>
-	<div class="table-responsive table-responsive-lg table-responsive-md">
-		<h1>Mon devis</h1>
-		<table>
-			<thead class="thead-dark table table-sm">
-			<tr>
-				<th>Numéro</th>
-				<th>Email</th>
-				<th>Type de site web</th>
-				<th>Type de design</th>
-				<th>Description du projet</th>
-				<th>Date de création</th>
-				<th>Status</th>
-				<th>Actions</th>
-				<th>Actions Ticket</th>
-			</tr>
-			</thead>
-			<tbody>
-			{% for devis in devisUser %}
-				<tr>
-					<td>{{ devis.id }}</td>
-					<td>{{ devis.email }}</td>
-					<td>{{ devis.typeDeSiteWeb }}</td>
-					<td>{{ devis.attentesDesignWeb }}</td>
-					<td>{{ devis.descriptionProjet }}</td>
-					<td>{{ devis.createdAt|date('Y-m-d H:i:s') }}</td>
-					<td>{{ devis.statut }}</td>
-					<td>
-						{#<a href="{{ path('front_download_devis', {'id': devis.id}) }}">
-							<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-file-earmark-arrow-down" viewBox="0 0 16 16">
-								<path d="M8.5 6.5a.5.5 0 0 0-1 0v3.793L6.354 9.146a.5.5 0 1 0-.708.708l2 2a.5.5 0 0 0 .708 0l2-2a.5.5 0 0 0-.708-.708L8.5 10.293V6.5z"/>
-								<path d="M14 14V4.5L9.5 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2zM9.5 3A1.5 1.5 0 0 0 11 4.5h2V14a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h5.5v2z"/>
-							</svg>
-						</a>#}
-						{% if app.user.id %}
-							<form action="{{ path('front_devis_delete', {'id': devis.id}) }}" method="post" onsubmit="return confirm('Êtes-vous sûr de vouloir supprimer ce devis ?');">
-								<button type="submit">
-									<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
-										<path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5Zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5Zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6Z"/>
-										<path d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1ZM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118ZM2.5 3h11V2h-11v1Z"/>
-									</svg>
-								</button>
-							</form>
-						{% endif %}
-					</td>
-					<td>
-						<a href="{{ path('send_message') }}" class="btn btn-outline-primary">
-							<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
-								<path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
-							</svg>
-						</a>
-
-						<a href="{{ path('front_show_ticket', {'id': devis.id}) }}" class="btn btn-outline-secondary">
-							<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-eye" viewBox="0 0 16 16">
-								<path d="M16 8s-3-5.5-8-5.5S0 8 0 8s3 5.5 8 5.5S16 8 16 8zM1.173 8a13.133 13.133 0 0 1 1.66-2.043C4.12 4.668 5.88 3.5 8 3.5c2.12 0 3.879 1.168 5.168 2.457A13.133 13.133 0 0 1 14.828 8c-.058.087-.122.183-.195.288-.335.48-.83 1.12-1.465 1.755C11.879 11.332 10.119 12.5 8 12.5c-2.12 0-3.879-1.168-5.168-2.457A13.134 13.134 0 0 1 1.172 8z"/>
-								<path d="M8 5.5a2.5 2.5 0 1 0 0 5 2.5 2.5 0 0 0 0-5zM4.5 8a3.5 3.5 0 1 1 7 0 3.5 3.5 0 0 1-7 0z"/>
-							</svg>
-						</a>
-					</td>
-				</tr>
-			{% endfor %}
-			</tbody>
-		</table>
+	<div class="container mb-4 main-container">
+		<div class="row">
+			<div class="col-lg-3">
+				<h3>Mes devis</h3>
+				<!-- Account Sidebar-->
+				<div class="wizard">
+					<nav class="list-group list-group-flush">
+						<span class="list-group-item"><i class="fa fa-user text-muted"></i> {{ app.user.email }}</span>
+						<a class="list-group-item" href="{{ path('send_message') }}"><i class="fa fa-map-marker text-muted"></i>Ouvrir un ticket</a>
+					</nav>
+				</div>
+			</div>
+			<!-- Orders Table-->
+			<div class="col-lg-9">
+				<div class="d-flex justify-content-end pb-3">
+					<div class="form-inline">
+						<label class="text-muted mr-3" for="order-sort">Ordres de tri</label>
+						<select class="form-control" id="order-sort">
+							<option>Tous</option>
+							<option>Livré</option>
+							<option>En cours</option>
+							<option>Retardé</option>
+							<option>Annulé</option>
+						</select>
+					</div>
+				</div>
+				<div class="table-responsive">
+					<table class="table table-hover mb-0">
+						<thead>
+						<tr>
+							<th>Numéro</th>
+							<th>Date de création</th>
+							<th>Status</th>
+							<th>Prix</th>
+							<th>Action</th>
+							<th>Action ticket</th>
+						</tr>
+						</thead>
+						<tbody>
+						{% for devis in devisUser %}
+							<tr>
+								<td>{{ devis.id }}</td>
+								<td>{{ devis.createdAt|date('Y-m-d H:i:s') }}</td>
+								<td><span class="{#badge badge-danger m-0#}">{{ devis.statut }}</span></td>
+								<td><span>€ prix</span></td>
+								<td>
+									{% if app.user.id %}
+										<form action="{{ path('front_devis_delete', {'id': devis.id}) }}" method="post" onsubmit="return confirm('Êtes-vous sûr de vouloir supprimer ce devis ?');">
+											<button type="submit">
+												<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
+													<path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5Zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5Zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6Z"/>
+													<path d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1ZM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118ZM2.5 3h11V2h-11v1Z"/>
+												</svg>
+											</button>
+										</form>
+									{% endif %}
+								</td>
+								<td>
+									<a href="{{ path('front_show_ticket', {'id': devis.id}) }}" class="btn btn-outline-secondary">
+										<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-eye" viewBox="0 0 16 16">
+											<path d="M16 8s-3-5.5-8-5.5S0 8 0 8s3 5.5 8 5.5S16 8 16 8zM1.173 8a13.133 13.133 0 0 1 1.66-2.043C4.12 4.668 5.88 3.5 8 3.5c2.12 0 3.879 1.168 5.168 2.457A13.133 13.133 0 0 1 14.828 8c-.058.087-.122.183-.195.288-.335.48-.83 1.12-1.465 1.755C11.879 11.332 10.119 12.5 8 12.5c-2.12 0-3.879-1.168-5.168-2.457A13.134 13.134 0 0 1 1.172 8z"/>
+											<path d="M8 5.5a2.5 2.5 0 1 0 0 5 2.5 2.5 0 0 0 0-5zM4.5 8a3.5 3.5 0 1 1 7 0 3.5 3.5 0 0 1-7 0z"/>
+										</svg>
+									</a>
+								</td>
+							</tr>
+						{% endfor %}
+						</tbody>
+					</table>
+				</div>
+			</div>
+		</div>
 	</div>
 {% endblock %}
