--- a/templates/security/register.html.twig
+++ b/templates/security/register.html.twig
@@ -34,7 +34,7 @@
 					</div>
 					<div>
 						<label for="email-address" class="sr-only">Identifiant de connexion</label>
-						{{ form_row(formRegister.email) }}
+						{{ form_widget(formRegister.email) }}
 						{{ form_errors(formRegister.email) }}
 					</div>
 					<div>
