added pdf download now in prod

--- a/assets/styles/pixel.scss
+++ b/assets/styles/pixel.scss
@@ -28617,7 +28617,7 @@ button.section-gray-800:focus {
     height: 1.25rem;
     width: 1.25rem;
     background-color: transparent;
-    color: rgba(0, 0, 0, 0.6);
+    color: white;
     line-height: 22px;
     border-radius: 50%;
     font-size: 1.25rem;
