--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,7 +7,7 @@
 		<meta name="keywords" content="Site web, Identité numérique, conseils site internet"/>
 		<meta content="Walid BELBECHE" name="author"/>
 		<title>
-			{% block title %}Walid BELBECHE
+			{% block title %}ScriptZenIT
 			{% endblock %}
 		</title>
 		<!-- Favicon -->
@@ -112,7 +112,8 @@
 		<!-- Front script -->
 		{% block javascripts %}
 			<script src="{{ asset('js/jquery-3.5.1.min.js') }}"></script>
-			<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
+			<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+			<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 			{{ encore_entry_script_tags('app') }}
 			{{ encore_entry_script_tags('imagesloaded') }}
 			<script src="{{ asset('js/modernizr.custom.js') }}"></script>
