--- a/templates/front/devis/new.html.twig
+++ b/templates/front/devis/new.html.twig
@@ -5,48 +5,115 @@
 
 {% block content %}
 	<div class="container">
-
 		<div class="text-center">
-			{% if app.user %}
-				<h1 class="display-5 fw-bold text-center">Discutons de votre projet {{ app.user.civility}}. {{ app.user.prenom }} {{ app.user.nom }} !</h1>
-			{% endif %}
-
-			<p class="lead">
-				Vous avez un projet en tête et souhaitez obtenir un devis personnalisé ? Vous êtes au bon endroit.
-			</p>
-
-			<p class="lead">
+			<svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" fill="currentColor" class="bi bi-chat-left-quote" viewBox="0 0 16 16">
+				<path d="M14 1a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1H4.414A2 2 0 0 0 3 11.586l-2 2V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12.793a.5.5 0 0 0 .854.353l2.853-2.853A1 1 0 0 1 4.414 12H14a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/>
+				<path d="M7.066 4.76A1.665 1.665 0 0 0 4 5.668a1.667 1.667 0 0 0 2.561 1.406c-.131.389-.375.804-.777 1.22a.417.417 0 1 0 .6.58c1.486-1.54 1.293-3.214.682-4.112zm4 0A1.665 1.665 0 0 0 8 5.668a1.667 1.667 0 0 0 2.561 1.406c-.131.389-.375.804-.777 1.22a.417.417 0 1 0 .6.58c1.486-1.54 1.293-3.214.682-4.112z"/>
+			</svg>
+			<h1 class="display-5 fw-bold text-body-emphasis">Discutons de votre projet</h1>
+			<div class="col-lg-6 mx-auto">
+				<div class="lead mb-4">
+					<p class="mb-3">Vous avez un projet en tête et souhaitez obtenir un devis personnalisé ? Vous êtes au bon endroit.</p>
+				</div>
+			</div>
+			<p class="lead mb-5">
 				Remplissez le formulaire ci-dessous pour détailler vos besoins. Une fois votre demande de devis soumise,
 				vous pourrez suivre son avancement en temps réel grâce à notre onglet <a href="{{ path('front_assistance') }}">Assistance</a>.
 				Je suis là pour vous accompagner à chaque étape.
 			</p>
-			{% if not app.user %}
-				<p class="lead">Deux possibilités s'offrent à vous, soit vous vous connecter, et dans ces cas vous aurez un suivi à votre demande</p>
-				<a href="{{ url('app_register') }}" class="btn btn-success">Cliquez ici pour vous inscrire</a>
-				<p class="lead">Soit vous créer votre demande, et vous complèterez vos informations plus tard</p>
-			{% endif %}
+			<div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+				<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#combinedModal">
+					Voir explications
+				</button>
+			</div>
 		</div>
-			<div class="px-4">
-				<div
-						class="col-lg-12 mx-auto padding-top-xxl">
-					<!-- Formulaire de devis -->
-					{{ form_start(formDevis) }}
-					<label for="">L'adresse email pour recevoir votre devis</label>
-					{{ form_row(formDevis.email) }}
-					{{ form_errors(formDevis.email) }}
-					<label for="">Type d'application souhaité</label>
-					{{ form_row(formDevis.type_de_site_web)}}
-					{{ form_errors(formDevis.type_de_site_web)}}
-					<label for="">Quelles sont vos attentes concernant le design ?</label>
-					{{ form_row(formDevis.attentes_design_web)}}
-					{{ form_errors(formDevis.attentes_design_web)}}
-					<label for="">Parlez moi un peu plus de votre projet !</label>
-					{{ form_row(formDevis.description_projet)}}
-					{{ form_errors(formDevis.description_projet)}}
-					<button type="submit">Recevoir mon récapitulatif de devis</button>
-					{{ form_end(formDevis) }}
+
+		<div class="b-example-divider"></div>
+
+		<!-- La Modal -->
+		<div class="modal fade" id="combinedModal" tabindex="-1" role="dialog" aria-labelledby="combinedModalLabel" aria-hidden="true">
+			<div class="modal-dialog" role="document">
+				<div class="modal-content">
+					<div class="modal-header">
+						<h5 class="modal-title" id="combinedModalLabel">Explications sur les Types de Sites Web et les Choix de Design</h5>
+						<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+							<span aria-hidden="true">&times;</span>
+						</button>
+					</div>
+					<div class="modal-body">
+						<!-- Explications pour les Types de Sites Web -->
+						<h5>Types de Sites Web:</h5>
+						<p><strong>Site vitrine:</strong> Idéal pour les entreprises qui veulent présenter leurs produits ou services, mais sans vendre en ligne.</p>
+						<p><strong>E-Commerce:</strong> Pour les entreprises qui veulent vendre des produits ou des services en ligne.</p>
+						<p><strong>Blog professionnel:</strong> Pour les entreprises ou les individus qui souhaitent partager des articles, des actualités et des informations pertinentes.</p>
+						<p><strong>Portfolio:</strong> Idéal pour les artistes, photographes, designers, etc., qui souhaitent montrer leur travail.</p>
+						<p><strong>Forum communautaire:</strong> Pour créer une communauté en ligne centrée autour d'un sujet ou d'un intérêt commun.</p>
+						<p><strong>Site d'information ou magazine en ligne:</strong> Pour les entreprises de médias ou les individus qui partagent des actualités et des articles fréquemment.</p>
+						<p><strong>Application Web et Mobile (Cross-plateforme):</strong> Des applications qui fonctionnent à la fois sur le web et les mobiles.</p>
+						<p><strong>Système de Gestion de Contenu (CMS):</strong> Pour les entreprises qui ont besoin d'un système robuste pour gérer beaucoup de contenu.</p>
+						<p><strong>Intranet d'entreprise:</strong> Pour les besoins internes de l'entreprise, comme la gestion des ressources humaines, des projets, etc.</p>
+						<p><strong>Application spécifique:</strong> Pour des besoins très spécifiques qui ne rentrent pas dans les catégories précédentes. Le client peut décrire ses besoins en détail.</p>
+
+						<h5>Explications pour les choix de design:</h5>
+						<h6>Design standard :</h6>
+						<p>Un design simple et efficace qui suit les meilleures pratiques du secteur.</p>
+
+						<h6>Avec vos propres maquettes :</h6>
+						<p>Si vous avez déjà conçu des maquettes ou des wireframes, cette option est pour vous.</p>
+
+						<h6>Design avancé :</h6>
+						<p>Un design entièrement personnalisé avec des fonctionnalités et des interactions complexes.</p>
+
+						<h6>Design orienté vers le mobile :</h6>
+						<p>Un design qui priorise l'expérience utilisateur sur les appareils mobiles.</p>
+
+						<h6>Design animé ou interactif :</h6>
+						<p>Inclut des animations et des interactions utilisateur pour un site plus dynamique.</p>
+
+						<h6>Thème sombre :</h6>
+						<p>Utilisation d'un thème de couleurs sombres pour réduire la fatigue oculaire et économiser de l'énergie sur les écrans OLED.</p>
+
+						<h6>Thème clair :</h6>
+						<p>Utilisation d'un thème de couleurs clairs pour améliorer la lisibilité et l'attrait visuel.</p>
+
+						<h6>Design axé sur l’accessibilité :</h6>
+						<p>Un design qui est optimisé pour l'accessibilité, conformément aux directives WCAG.</p>
+
+						<h6>Design minimaliste :</h6>
+						<p>Un design simple avec peu de couleurs et d'éléments, axé sur la facilité d'utilisation.</p>
+
+						<h6>Branding complet inclus :</h6>
+						<p>Inclut la création d'un logo, la sélection de couleurs de marque et d'autres éléments de branding.</p>
+
+						<h6>Personnalisation avancée :</h6>
+						<p>Offre une grande flexibilité dans la personnalisation du design, y compris des options avancées comme des micro-interactions, etc.</p>
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-secondary" data-dismiss="modal">Fermer</button>
+					</div>
 				</div>
 			</div>
-			{{ form_end(formDevis) }}
+		</div>
+		<div class="px-4">
+			<div class="col-lg-12 mx-auto padding-top-xxl">
+				<!-- Formulaire de devis -->
+				{{ form_start(formDevis) }}
+				<label for="">L'adresse email pour recevoir votre devis</label>
+				{{ form_row(formDevis.email) }}
+				{{ form_errors(formDevis.email) }}
+				<label for="">Type d'application souhaité</label>
+				{{ form_row(formDevis.type_de_site_web)}}
+				{{ form_errors(formDevis.type_de_site_web)}}
+				<label for="">Quelles sont vos attentes concernant le design ?</label>
+				{{ form_row(formDevis.attentes_design_web)}}
+				{{ form_errors(formDevis.attentes_design_web)}}
+				<label for="">Parlez moi un peu plus de votre projet !</label>
+				{{ form_row(formDevis.description_projet)}}
+				{{ form_errors(formDevis.description_projet)}}
+				<button type="submit">Recevoir mon récapitulatif de devis</button>
+				{{ form_end(formDevis) }}
+			</div>
+		</div>
+		{{ form_end(formDevis) }}
 	</div>
 {% endblock %}
