--- a/templates/front/home/index.html.twig
+++ b/templates/front/home/index.html.twig
@@ -5,38 +5,39 @@
 
 {% block content %}
 
+
 	{% if not app.user %}
-		<div class="alert alert-primary d-flex align-items-center" role="alert">
-			<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-exclamation-triangle-fill flex-shrink-0 me-2" viewBox="0 0 16 16" role="img" aria-label="Warning:">
-				<path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
-			</svg>
-			<div>
-				<ul>
-					<li>Bienvenue sur ScriptZen !</li>
-					<li>Pour réaliser une demande de devis, rendez-vous sur l'onglet <a href="{{ url('front_devis_new') }}" class="text-white">Inscription</a></li>
-				</ul>
-			</div>
-			<button type="button" class="ml-auto" data-bs-dismiss="alert" aria-label="fermer">
-				<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x" viewBox="0 0 16 16">
-					<path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
+		<div class="alert alert-primary d-flex align-items-center justify-content-between" role="alert">
+			<div class="d-flex align-items-center">
+				<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-exclamation-triangle-fill flex-shrink-0 me-2" viewBox="0 0 16 16" role="img" aria-label="Warning:">
+					<path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
 				</svg>
+				<div>
+					<ul class="mb-0">
+						<li>Bienvenue sur ScriptZen !</li>
+						<li>Pour réaliser une demande de devis, rendez-vous sur l'onglet <a href="{{ url('front_devis_new') }}" class="alert-link">Inscription</a></li>
+					</ul>
+				</div>
+			</div>
+			<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+				<span aria-hidden="true">&times;</span>
 			</button>
 		</div>
 	{% else %}
-		<div class="alert alert-primary d-flex align-items-center" role="alert">
-			<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-exclamation-triangle-fill flex-shrink-0 me-2" viewBox="0 0 16 16" role="img" aria-label="Warning:">
-				<path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
-			</svg>
-			<div>
-				<ul>
-					<li>Bienvenue {{ app.user.civility}}. {{ app.user.nom}} !</li>
-					<li>Pour demander assistance, rendez-vous sur l'onglet <a href="{{ url('front_assistance') }}" class="text-white">Assistance</a></li>
-				</ul>
-			</div>
-			<button type="button" class="ml-auto" data-bs-dismiss="alert" aria-label="fermer">
-				<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x" viewBox="0 0 16 16">
-					<path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
+		<div class="alert alert-primary d-flex align-items-center justify-content-between" role="alert">
+			<div class="d-flex align-items-center">
+				<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-exclamation-triangle-fill flex-shrink-0 me-2" viewBox="0 0 16 16" role="img" aria-label="Warning:">
+					<path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
 				</svg>
+				<div>
+					<ul class="mb-0">
+						<li>Bienvenue {{ app.user.civility}}. {{ app.user.nom}} !</li>
+						<li>Pour demander assistance, rendez-vous sur l'onglet <a href="{{ url('front_assistance') }}" class="alert-link">Assistance</a></li>
+					</ul>
+				</div>
+			</div>
+			<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+				<span aria-hidden="true">&times;</span>
 			</button>
 		</div>
 	{% endif %}
