--- a/public/css/front/css/app.css
+++ b/public/css/front/css/app.css
@@ -5,7 +5,7 @@
     max-width: 100%;
     vertical-align: bottom;
     position: absolute;
-    bottom: 32px;
+    bottom: 10px;
 }
 
 .logo-text {
@@ -63,6 +63,13 @@
         padding: 10px 20px;   /* Espacement à l'intérieur */
         font-size: 14px;      /* Taille du texte */
         text-align: center;   /* Centre le texte */
+    }
+    .intro{
+        padding-top: 100px;
+    }
+    .section-header.section-sm {
+        padding-top: 4rem;
+        padding-bottom: 3rem;
     }
 }
 
