edited page contact and base html

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -30,7 +30,7 @@
 	</head>
 	<body class="page">
 
-		<div class="lm-animated-bg"></div>
+		{#<div class="lm-animated-bg"></div>#}
 
 		<!-- Loading animation -->
 		<div class="preloader">
