--- a/templates/front/contact/index.html.twig
+++ b/templates/front/contact/index.html.twig
@@ -14,7 +14,7 @@
     <script src="{{ asset('js/jquery.googlemap.js') }}"></script>
     <script src='https://www.google.com/recaptcha/api.js'></script>
 
-    <div id="main" class="site-main">
+    <div id="main" class="site-main p-5">
         <div id="main-content" class="single-page-content">
             <div id="primary" class="content-area">
 
@@ -57,7 +57,7 @@
                                         <i class="linecons linecons-mail"></i>
                                     </div>
                                     <div class="ci-text">
-                                        <a href="mailto:wbelbeche.s@gmail.com" class="display-4">wbelbeche.s@gmail.com</a>
+                                        <a href="mailto:wbelbeche.s@gmail.com" class="display-4" style="font-size: 20px;">wbelbeche.s@gmail.com</a>
                                         <p>N'hésitez pas à m'envoyer un e-mail pour toute question ou proposition de projet.</p>
                                     </div>
                                 </div>
