--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -69,7 +69,7 @@
 				{% block content %}{% endblock %}
 
 				<!-- Footer -->
-				<footer class="site-footer clearfix">
+				<footer class="site-footer" style="z-index: 99998;">
 					<div class="footer-social">
 						<ul class="footer-social-links">
 							<li>
