--- a/templates/base_back.html.twig
+++ b/templates/base_back.html.twig
@@ -40,7 +40,7 @@
 		<!-- /Scroll To Top Button -->
 
 		<div class="page-scroll">
-			<div id="page_container" class="page-container bg-move-effect">
+			<div id="page_container" class="page-container bg-move-effect p-2">
 
 
 				{% block navbar %}
