--- a/templates/front/home/index.html.twig
+++ b/templates/front/home/index.html.twig
@@ -356,7 +356,7 @@
 
 
 	<!-- Pricing -->
-	<div class="container-fluid p-5  pb-7">
+	<div class="container-fluid p-5">
 		<div class="row">
 			<div class=" col-xs-12 col-sm-12 ">
 				<div class="block-title">
