--- a/public/css/front/css/app.css
+++ b/public/css/front/css/app.css
@@ -52,7 +52,7 @@
     text-align: center;   /* Centre le texte */
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (min-width: 300px) and (max-width: 750px) {
     #cookie-consent{
         position: fixed;       /* Flottant en bas de la page */
         bottom: 0;
