edited landing page + css

--- a/templates/front/home/index.html.twig
+++ b/templates/front/home/index.html.twig
@@ -61,7 +61,7 @@
 						des solutions de gestion de contenu faciles à utiliser.</p>
 					<a href="{{ url('front_devis_new') }}" class="btn btn-tertiary mr-3 animate-up-2 ni-mobile-button">Ce que nous faisons<span class="ml-2"><span class="fas fa-arrow-right"></span></span></a>
 				</div>
-				<div class="col-12 col-md-5 d-none d-md-block text-center"><img src="{{ asset('img/about-illustration.svg') }}" alt="scriptzenit"></div>
+				<div class="col-12 col-md-5 d-none d-md-block text-center"><img src="{{ asset('img/support/support1.svg') }}" alt="scriptzenit"></div>
 			</div>
 		</div>
 		<div class="position-absolute bottom-0 left-0 w-100 d-none d-md-block mb-n2">
@@ -86,7 +86,7 @@
 				<div class="col-12 col-md-6 col-lg-4 mb-5">
 					<div class="card shadow-soft border-light">
 						<div class="card-header p-0">
-							<img src="{{ asset('img/preparation.png')}}" class="card-img-top rounded-top" alt="image">
+							<img src="{{ asset('img/support/support0.svg')}}" class="card-img-top rounded-top" alt="image">
 						</div>
 						<div class="card-body">
 							<h3 class="card-title mt-3">Préparation / communication</h3>
@@ -111,7 +111,7 @@
 				<div class="col-12 col-md-6 col-lg-4 mb-5">
 					<div class="card shadow-soft border-light">
 						<div class="card-header p-0">
-							<img src="{{ asset('img/tableau-de-bord.png')}}" class="card-img-top rounded-top" alt="image">
+							<img src="{{ asset('img/support/support2.svg')}}" class="card-img-top rounded-top" alt="image">
 						</div>
 						<div class="card-body">
 							<h3 class="card-title mt-3">Prêt à vous lancer ?</h3>
@@ -136,7 +136,7 @@
 				<div class="col-12 col-md-6 col-lg-4 mb-5">
 					<div class="card shadow-soft border-light">
 						<div class="card-header p-0">
-							<img src="{{ asset('img/tickets.png')}}" class="card-img-top rounded-top" alt="image">
+							<img src="{{ asset('img/support/support3.svg')}}" class="card-img-top rounded-top" alt="image">
 						</div>
 						<div class="card-body">
 							<h3 class="card-title mt-3">Gestion des Tickets</h3>
