--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,7 +19,6 @@
 		rel="icon" href="{{ asset('medias/favicon/favicon.ico') }}">
 
 		<!-- Global CSS -->
-		<link rel="stylesheet" href="{{ asset('css/front/css/bootstrap.min.css') }}">
 		<link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet"/>
 		<link rel="stylesheet" href="{{ asset('css/front/css/about.css')}}">
 		<link rel="stylesheet" href="{{ asset('css/front/css/new.css') }}">
@@ -69,7 +68,7 @@
 				{% block content %}{% endblock %}
 
 				<!-- Footer -->
-				<footer class="site-footer" style="z-index: 99998;">
+				<footer class="site-footer">
 					<div class="footer-social">
 						<ul class="footer-social-links">
 							<li>
