--- a/templates/base_back.html.twig
+++ b/templates/base_back.html.twig
@@ -26,11 +26,11 @@
 		<body class="page"> <div class="lm-animated-bg"></div>
 
 		<!-- Loading animation -->
-		<div class="preloader">
+		{#<div class="preloader">
 			<div class="preloader-animation">
 				<div class="preloader-spinner"></div>
 			</div>
-		</div>
+		</div>#}
 		<!-- /Loading animation -->
 
 		<!-- Scroll To Top Button -->
