--- a/templates/front/home/index.html.twig
+++ b/templates/front/home/index.html.twig
@@ -377,7 +377,7 @@
 							</div>
 
 							<div class="fw-pricing-row">
-								<span>Sur devis</span>
+								<span>Choisissez votre formule</span>
 							</div>
 
 							<div class="fw-button-row">
@@ -399,7 +399,7 @@
 							</div>
 
 							<div class="fw-pricing-row">
-								<span>Sur devis</span>
+								<span>Choisissez votre formule</span>
 							</div>
 
 							<div class="fw-button-row">
