--- a/templates/front/includes/nav.html.twig
+++ b/templates/front/includes/nav.html.twig
@@ -4,10 +4,10 @@
 		<!-- Text Logo -->
 		<div class="logo">
 			<a href="{{ url('front_home') }}">
-				<img src="{{ asset('img/logo.png')}}" class="d-sm-none d-md-block d-lg-block" width="20%" height="30%" alt="Agence web à nevers (58)">
+				<img src="{{ asset('img/logo.png')}}" class="d-sm-none d-md-none d-lg-block" width="20%" height="30%" alt="Agence web à nevers (58)">
 			</a>
 			<a href="{{ url('front_home') }}">
-				<div class="logo-text d-md-none d-sm-block d-lg-none">ScriptZen
+				<div class="logo-text d-md-block d-lg-none d-sm-block">ScriptZen
 					<span>iT</span>
 				</div>
 			</a>
