--- a/templates/front/home/index.html.twig
+++ b/templates/front/home/index.html.twig
@@ -381,7 +381,7 @@
 							</div>
 
 							<div class="fw-button-row">
-								<a href="{{ url('front_devis_new', {'type': 'site_vitrine'}) }}" target="_self" class="btn btn-primary">Développement basique</a>
+								<a href="{{ url('front_devis_new', {'type': 'site_vitrine'}) }}" target="_self" class="btn btn-primary">Personnaliser</a>
 
 							</div>
 
@@ -392,7 +392,7 @@
 						</div>
 					</div>
 
-					<div class="fw-package-wrap col-md-6 highlight-col ">
+					{#<div class="fw-package-wrap col-md-6 highlight-col ">
 						<div class="fw-package">
 							<div class="fw-heading-row">
 								<span>DÉVELOPPEMENT SUR MESURE</span>
@@ -403,7 +403,7 @@
 							</div>
 
 							<div class="fw-button-row">
-								<a href="{{ url('front_devis_new', {'type': 'cross_plateforme'}) }}" target="_self" class="btn btn-primary">Développement spécifique</a>
+								<a href="{{ url('front_devis_new', {'type': 'cross_plateforme'}) }}" target="_self" class="btn btn-primary">Faire une demande</a>
 
 							</div>
 
@@ -412,7 +412,7 @@
 								techniquement, discutons ensemble de votre développement web sur mesure !
 							</div>
 						</div>
-					</div>
+					</div>#}
 				</div>
 			</div>
 			<!-- /Pricing -->
