--- a/templates/front/home/index.html.twig
+++ b/templates/front/home/index.html.twig
@@ -360,7 +360,8 @@
 		<div class="row">
 			<div class=" col-xs-12 col-sm-12 ">
 				<div class="block-title">
-					<h2>Que souhaitez-vous faire ?</h2>
+					<h2>Un large choix vous est proposé</h2>
+					<p>Que vous soyez un particulier ou un professionnel !</p>
 				</div>
 			</div>
 
@@ -373,11 +374,11 @@
 					<div class="fw-package-wrap col-md-6 ">
 						<div class="fw-package">
 							<div class="fw-heading-row">
-								<span>PRESENTATION ENTREPRISE</span>
+								<span class="text-uppercase">Développement entreprise</span>
 							</div>
 
 							<div class="fw-pricing-row">
-								<span>Choisissez votre formule</span>
+								<span>Un prix compétiteur et des fonctionnalités de bases</span>
 							</div>
 
 							<div class="fw-button-row">
@@ -387,23 +388,23 @@
 
 							<div class="fw-default-row">Vous êtes une marque souhaitant donner un coup de neuf à son site
 								web ou une entreprise souhaitant redynamiser sa présence sur le web ? Optez pour une
-								création de site vitrine sur mesure, dynamique et novateur. A votre image.
+								création d'application / site web sur mesure, dynamique et novateur. A votre image.
 							</div>
 						</div>
 					</div>
 
-					{#<div class="fw-package-wrap col-md-6 highlight-col ">
+					<div class="fw-package-wrap col-md-6 highlight-col ">
 						<div class="fw-package">
 							<div class="fw-heading-row">
 								<span>DÉVELOPPEMENT SUR MESURE</span>
 							</div>
 
 							<div class="fw-pricing-row">
-								<span>Choisissez votre formule</span>
+								<span>Pour un besoin spécifique</span>
 							</div>
 
 							<div class="fw-button-row">
-								<a href="{{ url('front_devis_new', {'type': 'cross_plateforme'}) }}" target="_self" class="btn btn-primary">Faire une demande</a>
+								<a href="{{ url('front_devis_new', {'type': 'cross_plateforme'}) }}" target="_self" class="btn btn-primary">Personnaliser</a>
 
 							</div>
 
@@ -412,7 +413,7 @@
 								techniquement, discutons ensemble de votre développement web sur mesure !
 							</div>
 						</div>
-					</div>#}
+					</div>
 				</div>
 			</div>
 			<!-- /Pricing -->
