edited mentions and removed select2

--- a/templates/front/administrative/mentions.html.twig
+++ b/templates/front/administrative/mentions.html.twig
@@ -15,7 +15,7 @@
         <p>Ces dernières sont accessibles sur le Site à la rubrique « Mentions légales ».</p>
 
         <h2 class="mt-5">ARTICLE 1 - L'EDITEUR</h2>
-        <p>L’édition et la direction de la publication du Site est assurée par belbeche walid, domiciliée 2 Les Buissons-cropigny, Chez Mr Stier Pascal, dont le numéro de téléphone est 0762972691, et l'adresse e-mail wbelbeche.s@gmail.com.</p>
+        <p>L’édition et la direction de la publication du Site est assurée par belbeche walid, domiciliée 2 Les Buissons-cropigny, Chez Mr Stier Pascal, dont le numéro de téléphone est 0762972691, et l'adresse e-mail wbelbeche.s@gmail.com immatriculé au RCS .</p>
         <p>ci-après l'Editeur.</p>
 
         <h2 class="mt-4">ARTICLE 2 - L'HEBERGEUR</h2>
@@ -36,11 +36,9 @@
 
         <p>Toute utilisation, reproduction, diffusion, commercialisation, modification de toute ou partie du Site, sans autorisation de l’Editeur est prohibée et pourra entraînée des actions et poursuites judiciaires telles que notamment prévues par le Code de la propriété intellectuelle et le Code civil.</p>
 
-        <p>Pour plus d’informations, se reporter aux CGU du site <a href="http://scriptzenit.fr/" target="_blank">http://scriptzenit.fr/</a> accessible à la rubrique "CGU"</p>
+        <p>Pour plus d’informations, se reporter aux Conditions générales du site <a href="http://scriptzenit.fr/" target="_blank">http://scriptzenit.fr/</a> accessible à la rubrique "CGU"</p>
 
-        <p>Pour plus d'informations en matière de protection des données à caractère personnel , se reporter à la Charte en matière de protection des données à caractère personnel du site <a href="http://scriptzenit.fr/" target="_blank">http://scriptzenit.fr/</a> accessible à la rubrique "Données personnelles"</p>
-
-        <p>Pour plus d'informations en matière de cookies, se reporter à la Charte en matière de cookies du site <a href="http://scriptzenit.fr/" target="_blank">http://scriptzenit.fr/</a> accessible à la rubrique "Cookies"</p>
+        <p>Pour plus d'informations en matière de cookies, se reporter à la Charte en matière de cookies du site <a href="https://scriptzenit.fr/conditions-utilisations" target="_blank">http://scriptzenit.fr/</a> accessible à la rubrique "Conditions générales"</p>
 
         <p class="mt-4"><small>Rédigé sur <a href="http://legalplace.fr/" target="_blank">http://legalplace.fr</a></small></p>
     </div>
